--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.4.0"
+    "graphql": "^15.4.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
